--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -46,38 +46,57 @@
 </div>
 
     <div class="firstRating">
+      <div>
 
 <img class="stars" src="./images/icon-star.svg" alt="">
 <img class="stars" src="./images/icon-star.svg" alt="">
 <img class="stars" src="./images/icon-star.svg" alt="">
 <img class="stars" src="./images/icon-star.svg" alt="">
 <img class="stars" src="./images/icon-star.svg" alt="">
+</div>
+
+<div>
 <span class="explanation">
     Rated 5 Stars in Reviews
 </span>
+</div>
   </div>
     <div class="secondRating" >
+
+      <div>
 
       <img class="stars" src="./images/icon-star.svg" alt="">
       <img class="stars" src="./images/icon-star.svg" alt="">
       <img class="stars" src="./images/icon-star.svg" alt="">
       <img class="stars" src="./images/icon-star.svg" alt="">
       <img class="stars" src="./images/icon-star.svg" alt="">
+
+    </div>
+    <div>
 
       <span class="explanation" >
     Rated 5 Stars in Report Guru
       </span>
+    </div>
+
   </div>
     <div class="thirdRating" >
+
+      <div>
 
 <img class="stars" src="./images/icon-star.svg" alt="">
 <img class="stars"  src="./images/icon-star.svg" alt="">
 <img class="stars"  src="./images/icon-star.svg" alt="">
 <img class="stars"  src="./images/icon-star.svg" alt="">
 <img class="stars"  src="./images/icon-star.svg" alt="">
+
+</div>
+<div>
 <span class="explanation" >
     Rated 5 Stars in BestTech
 </span>
+</div>
+
   </div>
   
 
